tests/invalid/resolver/private_symbol.ri
mod my_mod {
    struct PrivateStruct {
        a: i32;
        b: PrivateEnum;
    }
    const PRIVATE_CONST: i32 = 1;

    enum PrivateEnum { Variant }
}

mod my_mod2 {
    pub fn func() {
        _ = super::my_mod::PrivateStruct{
            a: super::my_mod::PRIVATE_CONST,
            b: super::my_mod::PrivateEnum::Variant
        };
    }
}

fn main() {
    my_mod2::func();
}
