tests/invalid/resolver/private_symbol.out
tests/failing/resolver/private_symbol.ri:13:28: error: type `PrivateStruct` is private
     |
  13 |         _ = super::my_mod::PrivateStruct{
     |                            ^
tests/failing/resolver/private_symbol.ri:14:31: error: constant `PRIVATE_CONST` is private
     |
  14 |             a: super::my_mod::PRIVATE_CONST,
     |                               ^
tests/failing/resolver/private_symbol.ri:15:31: error: type `PrivateEnum` is private
     |
  15 |             b: super::my_mod::PrivateEnum::Variant
     |                               ^
rivetc: error: could not compile package `core`, aborting due to 3 previous errors